25Nov09=======================================================================
1. Change sh/qrz to use the xml interface. You will have to subscribe to
the xml interface - see http://www.qrz.com/XML/index.html for more info.
2. Remove (bodged) forced encoding to iso-8859 on incoming text. More
subtle handling will be required.
3. Add CTY-1922 prefixes
14Nov09=======================================================================
1. Add CTY-1921 prefixes
2. allow -SSID values on set/badnode
27Aug09=======================================================================
1. Add CTY-1913 prefixes
2. Limit Route::config to 10 levels (as default)
08Jul09=======================================================================
1. Add CTY-1912 prefixes
26Jun09=======================================================================
1. Add CTY-1911 prefixes
14Jun09=======================================================================
1. Add CTY-1910 prefixes
04Jun09=======================================================================
1. removed warnings from debug.c from the C Client.
2. Add CTY-1909 prefixes
02Jun09=======================================================================
1. Add CTY-1908 prefixes
29May09=======================================================================
1. Add CTY-1907 prefixes
19May09=======================================================================
1. Add CTY-1905 prefixes
15May09=======================================================================
1. Add CTY-1904 prefixes
2. Accommodate "official" git command syntax in issue.pl
29Dec08=======================================================================
1. Add show/motd command as requested by Ian G0VGS.
2. add CTY-1817 prefixes
17Nov08=======================================================================
1. Fix sh/425 to work with new server
2. add CTY-1814 prefixes
21Oct08=======================================================================
1. Add CTY-1811 prefixes