@@ -193,6 +193,12 @@ sub pid_gone
 	}
 }
 
+sub peerhost
+{
+	my $self = shift;
+	return $self->{peerhost};
+}
+
 #-----------------------------------------------------------------
 # Send side routines
 sub connect {
@@ -225,7 +231,8 @@ sub connect {
 	return undef unless $r || _err_will_block($!);
 	
 	$conn->{sock} = $sock;
-    
+	$conn->{peerhost} = $sock->peerhost;	# for consistency
+
     if ($conn->{rproc}) {
         my $callback = sub {$conn->_rcv};
         set_event_handler ($sock, read => $callback);
