@@ -1,3 +1,5 @@
+26Nov09=======================================================================
+1. add ip address to PC92 A records
 25Nov09=======================================================================
 1. Change sh/qrz to use the xml interface. You will have to subscribe to
 the xml interface - see http://www.qrz.com/XML/index.html for more info.
